--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
      Copyright (C) 2012-2013 Andrew Neal
      Copyright (C) 2012-2014 The CyanogenMod Project
      Copyright (C) 2017-2020 The LineageOS Project
@@ -76,7 +75,7 @@
     <string name="clear">Clear</string>
     <string name="new_playlist_name_template">Playlist <xliff:g id="number">%d</xliff:g></string>
     <string name="create_playlist_prompt">Playlist name</string>
-    <string name="delete_dialog_title">Delete <xliff:g id="item" example="album">%s</xliff:g>?</string>
+    <string name="delete_dialog_title">Delete <xliff:g example="album" id="item">%s</xliff:g>?</string>
     <string name="clear_top_tracks_title">Clear top tracks?</string>
     <string name="clear_recent_title">Clear recently played?</string>
     <string name="clear_last_added">Clear last added?</string>
@@ -111,7 +110,7 @@
     <string name="accessibility_repeat_one">Repeat one</string>
 
     <!-- Toast messages -->
-    <string name="set_as_ringtone">\'<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\' set as ringtone</string>
+    <string name="set_as_ringtone">\'<xliff:g example="Alarm Bell" id="name">%s</xliff:g>\' set as ringtone</string>
 
     <!-- Settings -->
     <string name="settings_storage_category">Storage</string>
@@ -171,4 +170,5 @@
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
 
     <string name="channel_music">Music playback</string>
+    <string name="title_activity_osslicense">OSSLicense</string>
 </resources>
