--- a/res/values-ku/strings.xml
+++ b/res/values-ku/strings.xml
@@ -91,4 +91,6 @@
     <string name="no_effects_for_you">یه‌کسانکه‌ری ده‌نگ ناکرێته‌وه‌.</string>
     <string name="empty_recent">ئه‌و ئه‌لبومانه‌ی که‌ گوێت لێگرتوون لێره‌ نیشان ئه‌درێن ، گۆرانی لێبده‌.</string>
     <string name="empty_last_added">ئه‌و گۆرانیانه‌ی که‌ زیادکراون له‌ مانگی پێشوو لێره‌ نیشان ئه‌درێن.</string>
+    <string name="md3notavailable">Hîn peyda nabe!</string>
+    <string name="md3notavailable">Hîn peyda nabe!</string>
 </resources>
