--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -137,4 +137,6 @@
     <string name="header_other">"Digər"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">Musiqi oynatma</string>
+    <string name="md3notavailable">Hələ mövcud deyil!</string>
+    <string name="md3notavailable">Hələ mövcud deyil!</string>
 </resources>
