--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -135,4 +135,6 @@
     <string name="header_5_plus_albums">Больш за 5 альбомаў</string>
     <string name="header_other">"Іншыя"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
+    <string name="md3notavailable">Пакуль недаступны!</string>
+    <string name="md3notavailable">Пакуль недаступны!</string>
 </resources>
