--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -137,4 +137,6 @@
     <string name="header_other">"Други"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s </xliff:g> <xliff:g id="minutes">%2$s </xliff:g></string>
     <string name="channel_music">Възпроизвеждане на музика</string>
+    <string name="md3notavailable">Все още не е наличен!</string>
+    <string name="md3notavailable">Все още не е наличен!</string>
 </resources>
