--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -137,4 +137,6 @@
     <string name="header_other">"Altres"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">Reproducció de música</string>
+    <string name="md3notavailable">Encara no disponible!</string>
+    <string name="md3notavailable">Encara no disponible!</string>
 </resources>
