--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -137,4 +137,6 @@
     <string name="header_other">"Jiné"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">Přehrávání hudby</string>
+    <string name="md3notavailable">Zatím nedostupné!</string>
+    <string name="md3notavailable">Zatím nedostupné!</string>
 </resources>
