--- a/res/values-cy/strings.xml
+++ b/res/values-cy/strings.xml
@@ -137,4 +137,6 @@
     <string name="header_other">"Arall"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">Chwarae cerddoriaeth</string>
+    <string name="md3notavailable">Ddim ar gael eto!</string>
+    <string name="md3notavailable">Ddim ar gael eto!</string>
 </resources>
