--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -135,4 +135,6 @@
     <string name="header_5_plus_albums">5+ album</string>
     <string name="header_other">"Andre"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
+    <string name="md3notavailable">Ikke tilgængelig endnu!</string>
+    <string name="md3notavailable">Ikke tilgængelig endnu!</string>
 </resources>
