--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -137,4 +137,6 @@
     <string name="header_other">"Anderes"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">Musikwiedergabe</string>
+    <string name="md3notavailable">Zurzeit nicht verfügbar!</string>
+    <string name="md3notavailable">Zurzeit nicht verfügbar!</string>
 </resources>
