--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -137,4 +137,6 @@
     <string name="header_other">"Άλλα"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">Αναπαραγωγή μουσικής</string>
+    <string name="md3notavailable">Δεν είναι ακόμα διαθέσιμο!</string>
+    <string name="md3notavailable">Δεν είναι ακόμα διαθέσιμο!</string>
 </resources>
