--- a/res/values-eo/strings.xml
+++ b/res/values-eo/strings.xml
@@ -41,4 +41,6 @@
     <string name="header_5_to_9_songs">5 - 9 kantoj</string>
     <string name="header_10_plus_songs">10+ kantoj</string>
     <string name="header_5_plus_albums">pli of 5 albumoj</string>
+    <string name="md3notavailable">Ankoraŭ ne havebla!</string>
+    <string name="md3notavailable">Ankoraŭ ne havebla!</string>
 </resources>
