--- a/res/values-es-rUS/strings.xml
+++ b/res/values-es-rUS/strings.xml
@@ -136,4 +136,6 @@
     <string name="header_other">"Otros"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">Reproducción de música</string>
+    <string name="md3notavailable">¡Aun no está disponible!</string>
+    <string name="md3notavailable">¡Aun no está disponible!</string>
 </resources>
