--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -135,4 +135,6 @@
     <string name="header_5_plus_albums">5+ álbumes</string>
     <string name="header_other">"Otro"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
+    <string name="md3notavailable">¡Aun no está disponible!</string>
+    <string name="md3notavailable">¡Aun no está disponible!</string>
 </resources>
