--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -137,4 +137,6 @@
     <string name="header_other">"Muud"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">Muusika taasesitus</string>
+    <string name="md3notavailable">Pole veel saadaval!</string>
+    <string name="md3notavailable">Pole veel saadaval!</string>
 </resources>
