--- a/res/values-eu/strings.xml
+++ b/res/values-eu/strings.xml
@@ -136,4 +136,6 @@
     <string name="header_other">"Beste batzuk"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">Musika erreprodukzioa</string>
+    <string name="md3notavailable">Oraindik ez dago eskuragarri!</string>
+    <string name="md3notavailable">Oraindik ez dago eskuragarri!</string>
 </resources>
