--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -135,4 +135,6 @@
     <string name="header_5_plus_albums">+۵ آلبوم</string>
     <string name="header_other">"دیگر"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
+    <string name="md3notavailable">هنوز در دسترس نیست!</string>
+    <string name="md3notavailable">هنوز در دسترس نیست!</string>
 </resources>
