--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -137,4 +137,6 @@
     <string name="header_other">"Muut"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">Musiikin toisto</string>
+    <string name="md3notavailable">Ei saatavilla vielä!</string>
+    <string name="md3notavailable">Ei saatavilla vielä!</string>
 </resources>
