--- a/res/values-fy-rNL/strings.xml
+++ b/res/values-fy-rNL/strings.xml
@@ -137,4 +137,6 @@
     <string name="header_other">"Oare"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">Ofspyljen fan muzyk</string>
+    <string name="md3notavailable">Noch net beskikber!</string>
+    <string name="md3notavailable">Noch net beskikber!</string>
 </resources>
