--- a/res/values-gd/strings.xml
+++ b/res/values-gd/strings.xml
@@ -136,4 +136,6 @@
     <string name="header_other">"Eile"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">Cluiche ciùil</string>
+    <string name="md3notavailable">Chan eil e ri fhaighinn fhathast!</string>
+    <string name="md3notavailable">Chan eil e ri fhaighinn fhathast!</string>
 </resources>
