--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -135,4 +135,6 @@
     <string name="header_5_plus_albums">5 + albuma</string>
     <string name="header_other">"Ostalo"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s </xliff:g> <xliff:g id="minutes">%2$s </xliff:g></string>
+    <string name="md3notavailable">Još nije dostupno!</string>
+    <string name="md3notavailable">Još nije dostupno!</string>
 </resources>
