--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -137,4 +137,6 @@
     <string name="header_other">"Egyéb"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">Zenelejátszás</string>
+    <string name="md3notavailable">Még nem elérhető!</string>
+    <string name="md3notavailable">Még nem elérhető!</string>
 </resources>
