--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -136,4 +136,6 @@
     <string name="header_other">"Lain-lain"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">Pemutaran musik</string>
+    <string name="md3notavailable">Belum tersedia!</string>
+    <string name="md3notavailable">Belum tersedia!</string>
 </resources>
