--- a/res/values-is/strings.xml
+++ b/res/values-is/strings.xml
@@ -28,4 +28,5 @@
     <string name="empty_queue_secondary">Til að bæta lögum í spilunarbiðröðina þína, ýttu þá á valmyndina á lagi, hljómplötu eða flytjanda og veldu \"Bæta í biðröð\".</string>
     <string name="error_playing_track">Get ekki spilað lagið %1$s</string>
     <string name="header_5_plus_albums">5+ hljómplötur</string>
+    <string name="md3notavailable">Ekki í boði ennþá!</string>
 </resources>
