--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -137,4 +137,6 @@
     <string name="header_other">"Altro"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">Riproduzione musicale</string>
+    <string name="md3notavailable">Non ancora disponibile!</string>
+    <string name="md3notavailable">Non ancora disponibile!</string>
 </resources>
