--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -136,4 +136,6 @@
     <string name="header_other">"その他"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g><xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">音楽の再生</string>
+    <string name="md3notavailable">まだ利用できません！</string>
+    <string name="md3notavailable">まだ利用できません！</string>
 </resources>
