--- a/res/values-kn/strings.xml
+++ b/res/values-kn/strings.xml
@@ -135,4 +135,6 @@
     <string name="header_other">"ಇತರೆ"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">ಸಂಗೀತ ಪುನರಾಡಿಸು</string>
+    <string name="md3notavailable">ಇನ್ನೂ ಲಭ್ಯವಿಲ್ಲ!</string>
+    <string name="md3notavailable">ಇನ್ನೂ ಲಭ್ಯವಿಲ್ಲ!</string>
 </resources>
