--- a/res/values-lb/strings.xml
+++ b/res/values-lb/strings.xml
@@ -135,4 +135,6 @@
     <string name="header_5_plus_albums">5 oder méi Alben</string>
     <string name="header_other">"Aner"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
+    <string name="md3notavailable">Nach net verfügbar!</string>
+    <string name="md3notavailable">Nach net verfügbar!</string>
 </resources>
