--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -131,4 +131,6 @@
     <string name="header_5_plus_albums">5 + albumi</string>
     <string name="header_other">"Cits"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
+    <string name="md3notavailable">Vēl nav pieejams!</string>
+    <string name="md3notavailable">Vēl nav pieejams!</string>
 </resources>
