--- a/res/values-ml/strings.xml
+++ b/res/values-ml/strings.xml
@@ -135,4 +135,5 @@
     <string name="header_5_plus_albums">5+ ആൽബങ്ങൾ</string>
     <string name="header_other">""മറ്റുള്ളവ""</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
+    <string name="md3notavailable">ഇതുവരെ ലഭ്യമല്ല!</string>
 </resources>
