--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -135,4 +135,6 @@
     <string name="header_5_plus_albums">5+ अल्बम्स</string>
     <string name="header_other">""इतर""</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
+    <string name="md3notavailable">अद्याप उपलब्ध नाही!</string>
+    <string name="md3notavailable">अद्याप उपलब्ध नाही!</string>
 </resources>
