--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -135,4 +135,6 @@
     <string name="header_5_plus_albums">5+ albums</string>
     <string name="header_other">"Overig"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
+    <string name="md3notavailable">Nog niet verkrijgbaar!</string>
+    <string name="md3notavailable">Nog niet verkrijgbaar!</string>
 </resources>
