--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -135,4 +135,6 @@
     <string name="header_5_plus_albums">5+ ଆଲ୍‍ବମ୍‍</string>
     <string name="header_other">""ଅନ୍ୟାନ୍ୟ""</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
+    <string name="md3notavailable">ଏପର୍ଯ୍ୟନ୍ତ ଉପଲବ୍ଧ ନାହିଁ!</string>
+    <string name="md3notavailable">ଏପର୍ଯ୍ୟନ୍ତ ଉପଲବ୍ଧ ନାହିଁ!</string>
 </resources>
