--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -136,4 +136,6 @@
     <string name="header_other">"Inny"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">Odtwarzanie muzyki</string>
+    <string name="md3notavailable">Jescze niedostępne!</string>
+    <string name="md3notavailable">J</string>
 </resources>
