--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -137,4 +137,6 @@
     <string name="header_other">"Altele"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">Redare muzică</string>
+    <string name="md3notavailable">Nu este disponibil încă!</string>
+    <string name="md3notavailable">Nu este disponibil încă!</string>
 </resources>
