--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -137,4 +137,6 @@
     <string name="header_other">"Другие"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">Воспроизведение музыки</string>
+    <string name="md3notavailable">Пока недоступно!</string>
+    <string name="md3notavailable">Пока недоступно!</string>
 </resources>
