--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -137,4 +137,6 @@
     <string name="header_other">"Iné"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">Prehrávanie zvuku</string>
+    <string name="md3notavailable">Zatiaľ nedostupné!</string>
+    <string name="md3notavailable">Zatiaľ nedostupné!</string>
 </resources>
