--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -137,4 +137,5 @@
     <string name="header_other">"Ostalo"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">Predvajanje glasbe</string>
+    <string name="md3notavailable">Še ni na voljo!</string>
 </resources>
