--- a/res/values-sq/strings.xml
+++ b/res/values-sq/strings.xml
@@ -81,4 +81,6 @@
     <string name="header_5_plus_albums">5+ albume</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">Luaj muzikë</string>
+    <string name="md3notavailable">Nuk disponohet ende!</string>
+    <string name="md3notavailable">Nuk disponohet ende!</string>
 </resources>
