--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -135,4 +135,5 @@
     <string name="header_5_plus_albums">Fler än 5 album</string>
     <string name="header_other">"Annan"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
+    <string name="md3notavailable">Inte tillgänglig ännu!</string>
 </resources>
