--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -135,4 +135,5 @@
     <string name="header_5_plus_albums">5+ ஆல்பம்கள்</string>
     <string name="header_other">""மற்றவை""</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
+    <string name="md3notavailable">இன்னும் கிடைக்கவில்லை!</string>
 </resources>
