--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -137,4 +137,6 @@
     <string name="header_other">"อื่น ๆ"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">เล่นเพลง</string>
+    <string name="md3notavailable">ยังไม่พร้อมให้บริการ!</string>
+    <string name="md3notavailable">ยังไม่พร้อมให้บริการ!</string>
 </resources>
