--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -137,4 +137,5 @@
     <string name="header_other">"Diğer"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">Müzik çalma</string>
+    <string name="md3notavailable">Henüz mevcut değil!</string>
 </resources>
