--- a/res/values-ug/strings.xml
+++ b/res/values-ug/strings.xml
@@ -135,4 +135,6 @@
     <string name="header_5_plus_albums">5+ پىلاستىنكا</string>
     <string name="header_other">"باشقا"</string>
     <string name="duration_format"><xliff:g id="HOURS">%1$d</xliff:g> سائەت <xliff:g id="MINUTES">%2$d</xliff:g> مىنۇت</string>
+    <string name="md3notavailable">ھازىرچە يوق!</string>
+    <string name="md3notavailable">ھازىرچە يوق!</string>
 </resources>
