--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -137,4 +137,7 @@
     <string name="header_other">"其他"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">音乐播放</string>
+    <string name="md3notavailable">还不可用！</string>
+    <string name="md3notavailable">还不可用！</string>
+    <string name="md3notavailable">还不可用！</string>
 </resources>
