--- a/res/values-zh-rHK/strings.xml
+++ b/res/values-zh-rHK/strings.xml
@@ -126,4 +126,6 @@
     <string name="header_5_plus_albums">5 張以上專輯</string>
     <string name="header_other">"其他"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
+    <string name="md3notavailable">还不可用！</string>
+    <string name="md3notavailable">还不可用！</string>
 </resources>
