--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -136,4 +136,6 @@
     <string name="header_other">"其他"</string>
     <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
     <string name="channel_music">音樂播放</string>
+    <string name="md3notavailable">還不可用！</string>
+    <string name="md3notavailable">還不可用！</string>
 </resources>
